force-app/main/default/objects/Brokerage_Invoice__c/Brokerage_Invoice__c.object-meta.xml
<CustomObject>
    <label>Brokerage Invoice Line Item</label>
    <nameField>
        <displayFormat>BI-{000000}</displayFormat>
        <label>Brokerage Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brokerage Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>