force-app/main/default/objects/Brokerage_Invoice__c/fields/AOP_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>AOP_Brokerage__c</fullName>
    <formula>Brokerage_Lookup__r.AOP_Brokerage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AOP Brokerage %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>