force-app/main/default/objects/Brokerage_Invoice__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status (Invoice)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved By L2 - Site Heads</fullName>
                <label>Approved By L1 - Site Heads</label>
            </value>
            <value>
                <fullName>Approved By L3 - MIS CRM / CRM Accounts</fullName>
                <label>Approved By L2 - MIS CRM / CRM Accounts</label>
            </value>
            <value>
                <fullName>Approved By L4 - Billing CRM</fullName>
                <label>Approved By L3- Billing CRM</label>
            </value>
            <value>
                <fullName>Approved By L5 - Accounts</fullName>
                <label>Approved By L4 - Accounts</label>
            </value>
            <value>
                <fullName>Rejected By L2 - Site Heads</fullName>
                <label>Rejected By L1 - Site Heads</label>
            </value>
            <value>
                <fullName>Rejected By L3 - MIS CRM / CRM Accounts</fullName>
                <label>Rejected By L2 - MIS CRM / CRM Accounts</label>
            </value>
            <value>
                <fullName>Rejected By L4 - Billing CRM</fullName>
                <label>Rejected By L3 - Billing CRM</label>
            </value>
            <value>
                <fullName>Rejected By L5 - Accounts</fullName>
                <label>Rejected By L4 - Accounts</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved By L3 - Accounts</fullName>
            </value>
            <value>
                <fullName>Rejected By L3 - Accounts</fullName>
            </value>
            <value>
                <fullName>L1 - CP MIS Team</fullName>
                <isActive>false</isActive>
                <label>L1 - CP MIS Team</label>
            </value>
            <value>
                <fullName>Rejected By L1 - CP MIS Team</fullName>
                <isActive>false</isActive>
                <label>Rejected By Submitter</label>
            </value>
            <value>
                <fullName>Approved By L1 - CP MIS Team</fullName>
                <isActive>false</isActive>
                <label>Submitter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>