force-app/main/default/objects/Brokerage_Invoice__c/fields/Approval_Status_clearing__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_clearing__c</fullName>
    <inlineHelpText>For CP Invoice Clearing</inlineHelpText>
    <label>Approval Status(Eligibility check)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved By L1</fullName>
            </value>
            <value>
                <fullName>Approved By L2</fullName>
            </value>
            <value>
                <fullName>Rejected By L1</fullName>
            </value>
            <value>
                <fullName>Rejected By L2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>