force-app/main/default/objects/Brokerage_Invoice__c/fields/Booking_List__c.field-meta.xml
<CustomField>
    <fullName>Booking_List__c</fullName>
    <label>Booking List</label>
    <length>131070</length>
    <type>LongTextArea</type>
</CustomField>