force-app/main/default/objects/Brokerage_Invoice__c/fields/Brokerage_Amt_Post_TDS__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Amt_Post_TDS__c</fullName>
    <formula>(Brokerage_In_Rs__c + VALUE(IGST__c + CGST__c + SGST__c )) -  SAP_TDS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brokerage Amt- Post TDS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>