force-app/main/default/objects/Brokerage_Invoice__c/fields/Brokerage_In_Rs__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_In_Rs__c</fullName>
    <label>Brokerage (In Rs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>