force-app/main/default/objects/Brokerage_Invoice__c/fields/Brokerage_Invoice_Unique_No__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Invoice_Unique_No__c</fullName>
    <displayFormat>BI-{000000}</displayFormat>
    <label>Brokerage Invoice Unique No.</label>
    <type>AutoNumber</type>
</CustomField>