force-app/main/default/objects/Brokerage_Invoice__c/fields/Brokerage_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Lookup__c</fullName>
    <label>Brokerage</label>
    <referenceTo>Brokerage__c</referenceTo>
    <relationshipName>Brokerage_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>