force-app/main/default/objects/Brokerage_Invoice__c/fields/Brokerage_Scheme_Name__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Scheme_Name__c</fullName>
    <formula>Brokerage_Summary__r.Brokerage_Scheme__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brokerage Scheme Name</label>
    <type>Text</type>
</CustomField>