force-app/main/default/objects/Brokerage_Invoice__c/fields/Brokerage_Summary__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brokerage Summary</label>
    <referenceTo>Brokerage_Summary__c</referenceTo>
    <relationshipName>Brokerage_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>