force-app/main/default/objects/Brokerage_Invoice__c/fields/CGST__c.field-meta.xml
<CustomField>
    <fullName>CGST__c</fullName>
    <defaultValue>TEXT(0)</defaultValue>
    <label>CGST</label>
    <length>30</length>
    <type>Text</type>
</CustomField>