force-app/main/default/objects/Brokerage_Invoice__c/fields/CP_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>CP_Brokerage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Brokerage</label>
    <referenceTo>CP_Brokerage__c</referenceTo>
    <relationshipName>Brokerage_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>