force-app/main/default/objects/Brokerage_Invoice__c/fields/CP_Invoice_Approver_L3__c.field-meta.xml
<CustomField>
    <fullName>CP_Invoice_Approver_L3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Invoice Approver L2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Brokerage_Invoices2</relationshipName>
    <type>Lookup</type>
</CustomField>