force-app/main/default/objects/Brokerage_Invoice__c/fields/CP_Invoice_Clearing_L1__c.field-meta.xml
<CustomField>
    <fullName>CP_Invoice_Clearing_L1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Invoice Clearing L1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Brokerage_Invoices5</relationshipName>
    <type>Lookup</type>
</CustomField>