force-app/main/default/objects/Brokerage_Invoice__c/fields/CP_Mandate_Receipt__c.field-meta.xml
<CustomField>
    <fullName>CP_Mandate_Receipt__c</fullName>
    <formula>AND(
  AOP__c != null,
  AOP__r.RecordType.Name == &apos;CP Mandate&apos;
)</formula>
    <label>CP Mandate Receipt</label>
    <type>Checkbox</type>
</CustomField>