force-app/main/default/objects/Brokerage_Invoice__c/fields/CP_Mandate_Recovery_Amount__c.field-meta.xml
<CustomField>
    <fullName>CP_Mandate_Recovery_Amount__c</fullName>
    <label>CP Mandate Recovery Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>