force-app/main/default/objects/Brokerage_Invoice__c/fields/CP_Name__c.field-meta.xml
<CustomField>
    <fullName>CP_Name__c</fullName>
    <formula>Channel_Partner__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Name</label>
    <type>Text</type>
</CustomField>