force-app/main/default/objects/Brokerage_Invoice__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>IF( CONTAINS(Booking__r.Primary_Applicant_Name__c, &apos;Mr.&apos;) , SUBSTITUTE(Booking__r.Primary_Applicant_Name__c
, &apos;Mr.&apos;, &apos;&apos;),IF( CONTAINS(Booking__r.Primary_Applicant_Name__c, &apos;Mrs.&apos;) , SUBSTITUTE(Booking__r.Primary_Applicant_Name__c
, &apos;Mrs.&apos;, &apos;&apos;),IF( CONTAINS(Booking__r.Primary_Applicant_Name__c, &apos;Ms.&apos;) , SUBSTITUTE(Booking__r.Primary_Applicant_Name__c
, &apos;Ms.&apos;, &apos;&apos;),IF( CONTAINS(Booking__r.Primary_Applicant_Name__c, &apos;M/S.&apos;) , SUBSTITUTE(Booking__r.Primary_Applicant_Name__c
, &apos;M/S.&apos;, &apos;&apos;),Booking__r.Primary_Applicant_Name__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>