force-app/main/default/objects/Brokerage_Invoice__c/fields/Date_Approved_by_L1__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_by_L1__c</fullName>
    <label>Date Approved by L1</label>
    <type>DateTime</type>
</CustomField>