force-app/main/default/objects/Brokerage_Invoice__c/fields/Date_Approved_by_L2__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_by_L2__c</fullName>
    <label>Date Approved by L2</label>
    <type>DateTime</type>
</CustomField>