force-app/main/default/objects/Brokerage_Invoice__c/fields/Date_Approved_by_L3__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_by_L3__c</fullName>
    <label>Date Approved by L3</label>
    <type>DateTime</type>
</CustomField>