force-app/main/default/objects/Brokerage_Invoice__c/fields/Date_Approved_ByL2_formula__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_ByL2_formula__c</fullName>
    <formula>IF(  NOT( ISBLANK(Date_Approved_by_L2__c) )  , 

TEXT(DAY(DATEVALUE(Date_Approved_by_L2__c)))+&quot;/&quot;+CASE(MONTH(DATEVALUE(Date_Approved_by_L2__c)),
1, &quot;01&quot;,
2, &quot;02&quot;,
3, &quot;03&quot;,
4, &quot;04&quot;,
5, &quot;05&quot;,
6, &quot;06&quot;,
7, &quot;07&quot;,
8, &quot;08&quot;,
9, &quot;09&quot;,
10, &quot;10&quot;,
11, &quot;11&quot;,
12, &quot;12&quot;,
&quot;None&quot;)+&quot;/&quot;+TEXT(YEAR(DATEVALUE(Date_Approved_by_L2__c)))+&quot;,&quot;+IF(
OR(
VALUE( MID( TEXT( Date_Approved_by_L2__c), 12, 2 ) ) = 0,
VALUE( MID( TEXT( Date_Approved_by_L2__c), 12, 2 ) ) = 12
),
&quot;12&quot;,
TEXT( VALUE( MID( TEXT( Date_Approved_by_L2__c + 5.5/24), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( Date_Approved_by_L2__c + 5.5/24), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp; &quot;:&quot; &amp;
MID( TEXT( Date_Approved_by_L2__c + 5.5/24), 15, 2 )
&amp; &quot; &quot; &amp;IF(
VALUE( MID( TEXT( Date_Approved_by_L2__c + 5.5/24 ), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
)
			, &quot;NA&quot;)</formula>
    <label>Date Approved ByL2 formula</label>
    <type>Text</type>
</CustomField>