force-app/main/default/objects/Brokerage_Invoice__c/fields/Eligible_Slab__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Slab__c</fullName>
    <formula>Brokerage_Lookup__r.Eligible_Slab__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible Slab</label>
    <type>Text</type>
</CustomField>