force-app/main/default/objects/Brokerage_Invoice__c/fields/If_GST_is_applicable__c.field-meta.xml
<CustomField>
    <fullName>If_GST_is_applicable__c</fullName>
    <label>If GST is applicable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>