force-app/main/default/objects/Brokerage_Invoice__c/fields/IGST__c.field-meta.xml
<CustomField>
    <fullName>IGST__c</fullName>
    <defaultValue>TEXT(0)</defaultValue>
    <label>IGST</label>
    <length>30</length>
    <type>Text</type>
</CustomField>