force-app/main/default/objects/Brokerage_Invoice__c/fields/Invoice_Document_no_Generate__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Document_no_Generate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Retrigger the invoice to generate the sap document number.</inlineHelpText>
    <label>Invoice Document No. Generate</label>
    <type>Checkbox</type>
</CustomField>