force-app/main/default/objects/Brokerage_Invoice__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Downloaded</fullName>
            </value>
            <value>
                <fullName>Invoice Uploaded</fullName>
            </value>
            <value>
                <fullName>Payment in Progress</fullName>
            </value>
            <value>
                <fullName>Payment Done</fullName>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>