force-app/main/default/objects/Brokerage_Invoice__c/fields/Invoice_Status_Brokerage_invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status_Brokerage_invoice__c</fullName>
    <formula>IF(ISPICKVAL(Invoice_Status__c,&apos;Not Submitted&apos;) ,&apos;Bill Due&apos;,
IF(AND(ISPICKVAL(Invoice_Status__c,&apos;Invoice Uploaded&apos;),
NOT(ISPICKVAL(Approval_Status__c,&apos;Approved By L3 - Accounts&apos;)),ISBLANK(SAP_Document_No__c)),&apos;Bill Uploaded&apos;,
IF(AND(ISPICKVAL(Invoice_Status__c,&apos;Invoice Uploaded&apos;),ISBLANK(SAP_Document_No__c),
ISPICKVAL(Approval_Status__c,&apos;Approved By L3 - Accounts&apos;)),&apos;Pending for Accounts Approval&apos;,
IF(AND(ISPICKVAL(Invoice_Status__c,&apos;Invoice Uploaded&apos;),ISPICKVAL(Approval_Status__c,&apos;Approved By L3 - Accounts&apos;),Status__c == &apos;Unpaid&apos;, NOT(ISBLANK(SAP_Document_No__c))),&apos;Payment in Process&apos;,
IF(AND(ISPICKVAL(Invoice_Status__c,&apos;Invoice Uploaded&apos;),ISPICKVAL(Approval_Status__c,&apos;Approved By L3 - Accounts&apos;), NOT(ISBLANK(SAP_Document_No__c)),Status__c == &apos;Paid&apos;),&apos;Payment done&apos;,NULL)


)
)
)

)</formula>
    <label>Invoice Status(CP Portal)</label>
    <type>Text</type>
</CustomField>