force-app/main/default/objects/Brokerage_Invoice__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>Legal_Entity__c</referenceTo>
    <relationshipName>Brokerage_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>