force-app/main/default/objects/Brokerage_Invoice__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <formula>Booking__r.Tower__r.Zone_Name__r.Name</formula>
    <label>Phase</label>
    <type>Text</type>
</CustomField>