force-app/main/default/objects/Brokerage_Invoice__c/fields/Place_of_Supply__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Supply__c</fullName>
    <formula>TEXT(Channel_Partner__r.Place_of_Supply__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Place of Supply</label>
    <type>Text</type>
</CustomField>