force-app/main/default/objects/Brokerage_Invoice__c/fields/RW_Eligible_Slab__c.field-meta.xml
<CustomField>
    <fullName>RW_Eligible_Slab__c</fullName>
    <formula>IF(  Brokerage_Lookup__r.Name= &quot;Base Brokerage&quot; , &quot;Base Brokerage&quot; , &quot;Additional Brokerage-&quot;+Eligible_Slab__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible Slab</label>
    <type>Text</type>
</CustomField>