force-app/main/default/objects/Brokerage_Invoice__c/fields/SAP_Clearing_Date__c.field-meta.xml
<CustomField>
    <fullName>SAP_Clearing_Date__c</fullName>
    <label>SAP Clearing Date</label>
    <type>Date</type>
</CustomField>