force-app/main/default/objects/Brokerage_Invoice__c/fields/SAP_Document_No__c.field-meta.xml
<CustomField>
    <fullName>SAP_Document_No__c</fullName>
    <label>SAP Document No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>