force-app/main/default/objects/Brokerage_Invoice__c/fields/SGST__c.field-meta.xml
<CustomField>
    <fullName>SGST__c</fullName>
    <defaultValue>TEXT(0)</defaultValue>
    <label>SGST</label>
    <length>30</length>
    <type>Text</type>
</CustomField>