force-app/main/default/objects/Brokerage_Invoice__c/fields/SO_Number__c.field-meta.xml
<CustomField>
    <fullName>SO_Number__c</fullName>
    <formula>Booking__r.Sale_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SO Number</label>
    <type>Text</type>
</CustomField>