force-app/main/default/objects/Brokerage_Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>/*IF(AND(Total_Amount_Balance__c &lt;= 1 ,  Total_Amount_Balance__c &gt;= -1), &apos;Paid&apos;, &apos;Unpaid&apos;)*/


IF(AND(Total_Amount_Balance__c &lt;= 1), &apos;Paid&apos;, &apos;Unpaid&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>