force-app/main/default/objects/Brokerage_Invoice__c/fields/Total_Amount_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Balance__c</fullName>
    <formula>(Brokerage_In_Rs__c +  Value(CGST__c) + Value(SGST__c) + Value(IGST__c)  )- (Total_Amount_Paid__c + SAP_TDS__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>