force-app/main/default/objects/Brokerage_Invoice__c/fields/Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Paid__c</fullName>
    <label>Total Amount Paid</label>
    <summarizedField>Brokerage_Receipt__c.Invoice_Amount__c</summarizedField>
    <summaryForeignKey>Brokerage_Receipt__c.Brokerage_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>